build users db and methods to navigate

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,22 @@
-<h1><%= @user.name %></h1>
+<div class="section">
+  <div class="container">
+	  <div class="columns is-centered">
+      <div class="column is-9">
+        <h2 class="title is-2 is-spaced has-text-centered"><%= @user.name %>'s Profile</h2>
+	      <div class="columns is-centered">
+          <div class="column has-text-centered">
+           
+          </div>
+
+          <div class="column has-text-centered">
+            
+          </div>
+
+          <div class="column has-text-centered">
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
