--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,54 @@
   </head>
 
   <body>
-    <%= yield %>
 
-<h1>UPCOMING EVENTS</h1><br/>
-<h1>LAST EVENTS</h1>
+  <nav class="navbar is-success" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+   
+        <%= link_to root_path, class: "navbar-item" do %>
+          <h1 class="title is-4">Private Events</h1>
+        <% end %>
+
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
+
+      <div id="navbarExample" class="navbar-menu">
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="field is-grouped">
+              <button>Create Event</button>
+
+                 <% if current_user %>
+
+              <p class="control">
+                <%= link_to current_user.name, user_path(current_user), class: "button is-white" %>
+              </p>
+              <p>
+                <%= link_to "Logout", logout_path, class: "button is-white" %>
+              </p>
+
+            <% else %>
+
+              <p class="control">
+              <%= link_to 'Sign In', login_path, class: "button is-white" %>
+            </p>
+              <p class="control">
+                  <%= link_to 'Sign Up', signup_path, class: "button is-white" %>
+                </p>
+
+                <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+
+    <%= yield %>
 
 
   </body>
