--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,12 @@
+<% if current_user == nil %>
+  <%= require_login %>
+  <% else %>
 <div class="top">
   <div class="section">
     <h2 class="title is-2 has-text-centered">UPCOMING EVENTS</h2>
     <div class="container">
       <% @events.upcoming.each do |event| %>
+        <% if current_user.name == event.creator.name %>
         <div class="column is-12">
           <div class="card">
             <header class="card-header">
@@ -20,6 +24,7 @@
           </div>
         </div>
       <% end %>
+      <% end %>
     </div>
   </div>
 </div>
@@ -29,6 +34,7 @@
     <h2 class="title is-2 has-text-centered">PAST EVENTS</h2>
     <div class="container">
       <% @events.past.each do |event| %>
+        <% if current_user.name == event.creator.name %>
         <div class="column is-12">
           <div class="card">
             <header class="card-header">
@@ -46,6 +52,8 @@
           </div>
         </div>
       <% end %>
+      <% end %>
     </div>
   </div>
 </div>
+<% end %>
